fixing small button on mobile screen.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,3 +85,8 @@ p {
   box-sizing: border-box;
   text-align: center;
 }
+
+.action button {
+  padding: 12px;
+  font-size: 18px;
+}
